Added the --ignore-ocsp-errors command line option
2021-08-31 Version   2.4.3: Fixed the connection to the TLS renegotiation on FreeBSD
                            Detects old BSD date without -f and computes the date with dconv
2021-08-27 Version   2.4.2: Fixed the handling of IP addresses
2021-08-19 Version   2.4.1: Fixed the handling of --file and --cn
2021-08-16 Version   2.4.0: Support DANE TLSA 312
2021-08-13 Version   2.3.8: Bug fix: fixed the parsing of the --cn command line option
                            Bug fix: better validation of the host command line argument
2021-07-09 Version   2.3.7: Bug fix: performance data is no more shown by critical and warning message when --no-perf is specified
2021-06-23 Version   2.3.6: Bug fix: follows symbolic links
2021-06-22 Version   2.3.5: Bug fix: correct parsing of file(1) ou
2021-06-18 Version   2.3.4: Stop the SSL Labs checks after an error
2021-06-16 Version   2.3.3: Speedup the offered ciphers check
2021-06-03 Version   2.3.2: Bug fix: always uses the specifies OpenSSL binary and respects the specified IP version
2021-05-28 Version   2.3.1: Compatibility fixes for LibreSSL on macOS
                            Added sanity checks for file write operations
2021-05-21 Version   2.3.0: Added the --debug-file option
2021-05-07 Version   2.2.0: Bug fix: --debug does not store any information in $TMPDIR anymore
                            To locally store the retrieved certificates in debug mode the option --debug-cert has to be specified
2021-05-06 Version   2.1.4: Bug fix in the handling of Qualy's SSL Lab command line options
2021-05-05 Version   2.1.3: Bug fix in the Qualy's SSL Lab check of non-reachable machines
2021-04-30 Version   2.1.2: Add domain if FQDN is missing
2021-04-29 Version   2.1.1: Correct handling of subdomains with underscores
2021-04-25 Version   2.1.0: Added an option to hide performance data