@@ -19,7 +19,7 @@
 ################################################################################
 # Constants
 
-VERSION=2.4.3
+VERSION=2.5.0
 SHORTNAME="SSL_CERT"
 
 VALID_ATTRIBUTES=",startdate,enddate,subject,issuer,modulus,serial,hash,email,ocsp_uri,fingerprint,"
