@@ -1,4 +1,5 @@
-Added the --ignore-ocsp-errors command line option
+2021-09-15 Version   2.5.0: Added the --ignore-ocsp-errors command line option
+                            Bug fix: fixed the behavior of the --element command line option
 2021-08-31 Version   2.4.3: Fixed the connection to the TLS renegotiation on FreeBSD
                             Detects old BSD date without -f and computes the date with dconv
 2021-08-27 Version   2.4.2: Fixed the handling of IP addresses
